<resources>
    <string name="app_name">TFAdmin</string>
    <string name="criar_conta">Criar Conta</string>
    <string name="login">Login</string>
    <string name="titchersfriend">TitchersFriend</string>
    <string name="palavra_passe">Palavra Passe</string>
    <string name="nome_de_utilizador">Nome de Utilizador</string>
    <string name="criar">Criar Conta</string>
    <string name="email">E-mail</string>
    <string name="rep_pass">Repita a Palavra Passe</string>
    <string name="carro">carro</string>
    <string name="flor">flor</string>
    <string name="gerir_alunos">Gerir Alunos</string>
    <string name="marcar_faltas">Marcar Faltas</string>
    <string name="gerir_aulas">Gerir Aulas</string>
    <string name="sumarios">Sumários</string>
    <string name="nome">Nome</string>
    <string name="notas">Notas</string>
    <string name="submeter">Submeter</string>
    <string name="cancelar">Cancelar</string>
    <string name="idade">Idade</string>
    <string name="sexo">Sexo</string>
    <string name="morada">Morada</string>
    <string name="email_pais">E-mail dos pais</string>
    <string name="adicionar">Adicionar</string>
    <string name="voltar">Voltar</string>
    <string name="aprovacao">A sua conta está à espera de aprovação.</string>
    <string name="novo_aluno">Novo aluno</string>
    <string name="add_alergia">Adicionar alergia</string>
    <string name="reg_aluno">Registar Aluno</string>
    <string name="alergias">Alergias</string>
    <string name="nova_alergia">Nova Alergia</string>
    <string name="mais">+</string>
    <string name="admin">Admin</string>
    <string name="gerir_sumarios">Sumários</string>
    <string name="educadores">Educadores</string>
    <string name="sair">Sair</string>
    <string name="registar_aula">Registar Aula</string>
    <string name="data">Data</string>
    <string name="sumario">Sumário</string>
    <string name="gerir_educadores">Gerir Educadores</string>
    <string name="novo_educador">Novo Educador</string>
    <string name="novos_educadores">Novos Educadores</string>
    <string name="aceitar">Aceitar</string>
    <string name="dia">Dia</string>
    <string name="editar_aula">Editar Aula</string>
    <string name="escrever_rel">Escrever Relatório</string>
    <string name="editar_dados">Editar Dados</string>
    <string name="gerir_admins">Gerir Administradores</string>
    <string name="novo_admin">Novo Administrador</string>
    <string name="gerir_turmas">Gerir Turmas</string>
    <string name="gerir_dados">Gerir Dados</string>
    <string name="mudar_password">Mudar Password</string>
    <string name="password_anterior">Password anterior</string>
    <string name="nova_password">Nova password</string>
    <string name="rep_novapass">Repetia a nova password</string>
    <string name="turma">Turma</string>
    <string name="gerir_faltas">Gerir Faltas</string>
    <string name="gerir_utilizadores">Gerir Utilizadores</string>
    <string name="gerir_rels">Gerir Relatórios</string>
    <string name="editar_dados_espacos">Editar Dados</string>
    <string name="em_espera">Em Espera</string>
    <string name="registar">Registar</string>
    <string name="no_connection">Não conseguimos estabelecer a ligação com o servidor. Tem o WiFi ligado?</string>
    <string name="ok">Ok</string>
    <string name="id">ID</string>
</resources>