<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fundo"
    android:orientation="vertical"
    android:weightSum="100"
    tools:context=".Activity_AddAlergiaAluno">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/titulo_alergias"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="120dp"
            android:fontFamily="@font/sweet_purple"
            android:gravity="center"
            android:shadowColor="@android:color/white"
            android:shadowDx="7"
            android:shadowDy="7"
            android:shadowRadius="1"
            android:text="@string/alergias"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textSize="50sp" />


        <LinearLayout
            android:id="@+id/listaAlergias"
            android:layout_width="fill_parent"
            android:layout_height="300dp"
            android:layout_marginTop="25dp"
            android:orientation="vertical" />



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginTop="20dp"
            android:gravity="center|top"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnSubmeterAlergias"
                android:layout_width="175dp"
                android:layout_height="match_parent"
                android:layout_marginEnd="15dp"
                android:background="@drawable/cantos_botoes"
                android:fontFamily="@font/sweet_purple"
                android:text="@string/submeter"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textSize="40sp"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/btnCancelarAlergias"
                android:layout_width="175dp"
                android:layout_height="match_parent"
                android:background="@drawable/cantos_botoes"
                android:fontFamily="@font/sweet_purple"
                android:text="@string/cancelar"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textSize="40sp"
                tools:ignore="ButtonStyle" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>